# files

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build_and_test_ubuntu_gcc12_x64_debug.yml  build_and_test_ubuntu_gcc12_x64_release.yml  build_and_test_windows_msvc_x64_debug.yml  build_and_test_windows_msvc_x64_release.yml  release.yml
files/: CMakeLists.txt  csv.hpp  files.hpp
packaging/: files.nuspec
test/: CMakeLists.txt  csv.test.cpp
